# covidstats

./: .gitmodules  CMakeLists.txt  Dockerfile.clang11  README.md
lib/: CMakeLists.txt
lib/include/: CasesRepository.h  RKICasesRepository.h  ResultStream.h  mylib.h
lib/include/CasesRepository/: CasesRepository.h  RKICasesRepository.h
lib/include/ResultStream/: FileResultStream.h  ResultStream.h  StdoutResultStream.h
lib/src/: RKICasesRepository.cpp  mylib.cpp
lib/src/CasesRepository/: RKICasesRepository.cpp
lib/src/ResultStream/: FileResultStream.cpp  StdoutResultStream.cpp
src/: App.cpp  App.h  CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tests.cpp
